# ed-egui

./: .gitignore  ARCHITECTURE.md  Cargo.toml  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  README.md  ROADMAP.md  STATUS.md
.github/workflows/: rust.yml
examples/: basic_editor.rs  emacs_editor.rs  markdown_editor.rs  minimal.rs  simple_editor.rs  vim_editor.rs
src/: lib.rs  tests.rs
src/editor/: buffer.rs  commands.rs  emacs_handler.rs  keyhandler.rs  mod.rs  vim_handler.rs
src/modes/: emacs.rs  mod.rs  vim.rs
src/syntax/: languages.rs  markdown.rs  mod.rs
