[package]
name = "ed-egui"
version = "0.1.0"
edition = "2021"
description = "A code editor widget for egui with Vim and Emacs key bindings"
repository = "https://github.com/navicore/ed-egui"
license = "MIT OR Apache-2.0"
keywords = ["egui", "editor", "gui", "vim", "emacs"]
categories = ["gui", "text-editors"]

[dependencies]
egui = "0.31.1"
eframe = { version = "0.25.0", optional = true }
bevy_egui = { version = "0.34", optional = true }
syntect = { version = "5.1", default-features = false, features = ["default-fancy"] }
log = "0.4"

[features]
default = ["eframe-demo"]
eframe-demo = ["eframe"]
bevy = ["bevy_egui"]

[[example]]
name = "minimal"
required-features = ["eframe-demo"]

[[example]]
name = "basic_editor"
required-features = ["eframe-demo"]

[dev-dependencies]
env_logger = "0.11"